<resources>
    <string name="app_name">MemoryNote</string>

    <string name="memo">Memo</string>
    <string name="date_format">yyyy. M. d. HH:mm</string>

    <string name="delete">Delete</string>
    <string name="lock">Lock</string>
    <string name="unlock">UnLock</string>
    <string name="delete_dialog">Do you want to delete the selected memo?</string>
    <string name="cancel">Cancel</string>

    <string name="settings">Settings</string>
    <string name="password_settings">Password Settings</string>
    <string name="password_settings_summary">Save and change passwords.</string>
    <string name="password_new">Enter a new password</string>
    <string name="password_confirm">Confirm password</string>
    <string name="password_reenter">Re-enter password</string>
    <string name="password_setup_complete">Password setup complete!</string>
    <string name="password_enter">Enter password</string>
    <string name="password_change">Change password</string>
    <string name="password_required">Please set a password.</string>

    <string name="select">Select Memo</string>
    <string name="all">All</string>
    <string name="selected_delete">Select memos to delete.</string>

    <string name="login">Login</string>
    <string name="login_info">Login Info</string>
    <string name="login_summary">Login is required.</string>

    <string name="sync">Sync</string>
    <string name="sync_summary">Back up and restore your memos.</string>

    <string name="password_find">Did you forget your password?</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="or">Or</string>
    <string name="signup">Sign Up</string>
</resources>